# discriminative-randomwalk

./: Makefile.am  Makefile.in  README.md  configure  configure.ac
m4/: gtest.m4
src/: Makefile.am  Makefile.in  dwalk.cc  dwalk.h  dwalk_const.cc  main.cc  matrix.cc  matrix.h  transition_matrix.cc  transition_matrix.h  transition_matrix_adjcency.cc  transition_matrix_adjcency.h  transition_matrix_linkedlist.cc  transition_matrix_linkedlist.h
tests/: Makefile.am  Makefile.in  test_realdata.cc  test_simple.cc
tests/dataset2/: sample.label
tests/dataset3/: activate-knn9.in  activate-mat.in  activate.label
tests/dataset4/: add-knn5.in  add.label
tests/dataset5/: sample.in  sample.in~  sample.label  sample.label~  sample.result.weight
